kubernetes/apps/home-automation/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
        nfsMount: "true"
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.3.0
        resources:
          limits:
            memory: "1000Mi"
        ports:
          - containerPort: 9000
        volumeMounts:
        - mountPath: /app/data/
          subPath: mealie
          name: unraid-storage
      volumes:
      - name: unraid-storage
        persistentVolumeClaim:
          claimName: unraid-pvc
