kubernetes/apps/home-automation/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: home-automation
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
  - name: webui
    protocol: TCP
    port: 9000
    targetPort: 9000
