kubernetes/apps/home-automation/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: mealie-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.tnorbert.com"
spec:
  ingressClassName: external
  rules:
  - host: mealie.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: mealie-internal
spec:
  ingressClassName: internal
  rules:
  - host: mealie.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              number: 9000
